css/style.css
html {
  box-sizing: border-box;
}

*,
::before,
::after {
  box-sizing: inherit;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  position: relative;
  overflow: hidden;
  background: #fff8f8;
  font-family: "Dosis", Helvetica, Arial, sans-serif;
}

.main {
  position: relative;
  width: 720px;
  margin: 16px;
  background-color: rgb(255, 253, 253);
}

/* SVG BLOBS */

.main__svg-left-top {
  width: 80%;
  position: absolute;
  top: -240px;
  left: -300px;
  opacity: 0.95;
  z-index: 1;
}

.main__svg-left-middle {
  width: 70%;
  position: absolute;
  top: 25px;
  left: -330px;
  z-index: 2;
}

.main__svg-left-bottom {
  width: 25%;
  position: absolute;
  top: 265px;
  left: -20px;
  z-index: 3;
}

.main__svg-right-top {
  width: 22%;
  position: absolute;
  top: 280px;
  left: 675px;
  opacity: 1;
  z-index: 3;
}

.main__svg-right-middle {
  width: 85%;
  position: absolute;
  top: 135px;
  left: 445px;
  z-index: 2;
}

.main__svg-right-bottom {
  width: 30%;
  position: absolute;
  top: 410px;
  left: 430px;
  z-index: 3;
}

/* CARD */

.card {
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
  padding: 32px;
}

.card::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: transparent;
  animation: createShadow 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
  z-index: 5;
}

.card__image {
  flex-shrink: 0;
  width: 148px;
  height: 148px;
  margin-right: 56px;
  border-radius: 50%;
  opacity: 0.9;
  z-index: 2;
}

.card__header {
  margin-bottom: 16px;
}

.card__name {
  margin: 0;
  font-size: 42px;
  font-weight: 400;
  color: #2c496b;
}

.card__position {
  margin: 0;
  font-size: 18px;
  line-height: 24px;
  font-weight: 500;
  color: #a5ad9f;
}

.card__description {
  margin: 0;
  padding-top: 10px;
  font-size: 15px;
  line-height: 20px;
  font-weight: 400;
}

.special {
  font-weight: 500;
  color: #dba2b0;
}

/* SOCIAL MEDIA LINKS */

.card__media {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
}

.card__media__link {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  width: 2.2rem;
  height: 2.2rem;
  margin: 30px 15px 10px 0;
  border-radius: 50%;
  background-color: #2c496b;
  text-decoration: none;
  z-index: 6;
}

.card__media__link::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 2.2rem;
  height: 2.2rem;
  border-radius: 50%;
  background: #2c496b;
}

.card__media__link:hover::before {
  animation: pulse 1.2s ease;
}

@keyframes pulse {
  0% {
    transform: scale(1, 1);
  }
  50% {
    opacity: 0.3;
  }
  100% {
    transform: scale(1.5);
    opacity: 0;
  }
}

.card__media__link span {
  color: #fff;
  font-size: 16px;
  z-index: 7;
}

@keyframes createShadow {
  0% {
    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
  }
  100% {
    -webkit-box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.2);
    box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.2);
  }
}

@media screen and (max-width: 768px) {
  .main {
    width: 500px;
  }

  /* SVG */

  .main__svg-left-top {
    top: -220px;
    left: -250px;
  }

  .main__svg-left-middle {
    display: none;
  }

  .main__svg-left-bottom {
    top: -70px;
    left: 50px;
  }

  .main__svg-right-top {
    display: none;
  }

  .main__svg-right-middle {
    top: 455px;
    left: 350px;
  }

  .main__svg-right-bottom {
    width: 20%;
    top: 660px;
    left: 380px;
  }

  /* CARD */

  .card {
    flex-direction: column;
    align-items: center;
    padding: 32px;
  }

  .card__wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .card__image {
    margin-right: 0;
    margin-bottom: 32px;
  }
}

@media screen and (max-width: 550px) {
  body {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    height: 100vh;
    overflow: visible;
  }

  .main {
    position: relative;
    margin: 8px;
    width: 100%;
  }

  /* SVG BLOBS */

  .main__svg-left-top,
  .main__svg-left-bottom,
  .main__svg-right-bottom,
  .main__svg-right-middle {
    display: none;
  }

  /* CARD */

  .card__image {
    width: 128px;
    height: 128px;
  }

  .card__wrapper {
    text-align: center;
  }

  .card__name {
    font-size: 36px;
  }

  .card__description {
    font-size: 14px;
    line-height: 18px;
  }
}

